// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render exepnses with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render exepnses with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $235,341,341.34
  </h1>
</div>
`;
